# template_newspaper

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  README.md  STANDALONE.md  TODO.md  _combined_manuscript.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  manuscript__00_abstract.html  manuscript__01_introduction.html  manuscript__03_typography_and_figures.html  pyproject.toml
.agents/skills/: AGENTS.md
content/: AGENTS.md  README.md  edition.yaml
content/pages/: 00_front_page.yaml  01_local_region.yaml  02_government.yaml  03_coast_environment.yaml  04_opinion.yaml  05_business_fishing.yaml  06_community_arts.yaml  (+7 more)
data/: AGENTS.md  README.md  claim_ledger.yaml
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  faq.md  forking_guide.md  output_conventions.md  quickstart.md  rendering_pipeline.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  01_introduction.md  02_engine_architecture.md  03_typography_and_figures.md  04_reproducibility.md  99_references.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  preamble.md  references.bib
scripts/: 00_preflight.py  10_generate_figures.py  20_render_newspaper.py  AGENTS.md  CONVENTIONS.md  README.md  _bootstrap.py
src/: AGENTS.md  README.md  STYLE.md  __init__.py
tests/: AGENTS.md  PATTERNS.md  README.md  conftest.py  test_ads.py  test_components.py  test_config.py  test_content.py  test_engine.py  test_figures.py  test_furniture.py  test_geometry.py  test_robustness.py  test_typography.py
(+90 files in other folders)
