# template_newspaper — exemplar large-format newspaper layout project
# Inherits workspace settings from the root pyproject.toml.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_newspaper"
version = "1.0.2"
description = "Data-driven large-format newspaper layout engine (ReportLab) that renders a 12-page US-tabloid edition (broadsheet optional) — 'The Triplicate' of Crescent City, CA — from structured YAML content."
authors = [{name = "Research Template Author", email = "author@research-template.org"}]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
# Inherits workspace settings from root pyproject.toml
